--- a/BoscoGame/app/src/main/AndroidManifest.xml
+++ b/BoscoGame/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
         <activity android:name=".TelaCreditos" >
         </activity>
         <activity android:name=".instruction" />
-        <activity android:name=".TelaInicial" />
-        <activity android:name=".TelaPause" />
-        <activity android:name=".TelaJogo" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".TelaInicial" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+        <activity android:name=".TelaPause" />
+        <activity android:name=".TelaJogo" />
     </application>
 
 </manifest>
