--- a/BoscoGame/app/src/main/AndroidManifest.xml
+++ b/BoscoGame/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.boscogame" >
+    package="com.example.boscogame">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".TelaCreditos" >
-        </activity>
-        <activity android:name=".instruction" />
-        <activity android:name=".TelaInicial" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/a" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        <activity android:name=".TelaCreditos"></activity>
+        <activity android:name=".instruction" />
+        <activity android:name=".TelaInicial">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".TelaPause" />
         <activity android:name=".TelaJogo" />
